--- a/translations/locales/en/helpSave.json
+++ b/translations/locales/en/helpSave.json
@@ -2,11 +2,11 @@
   "intro.centralize": "Centralize and organize ",
   "intro.description": "all your favorite builds for quick access.",
 
-  "how_to_use_favorites.title": "How to manage your favorite builds",
-  "how_to_use_favorites.step.save_set": "Save a new build",
-  "how_to_use_favorites.step.save_set.label_description": "After finding a build you like, save it here to access it easily later",
-  "how_to_use_favorites.step.choose_stats": "Edit displayed stats",
-  "how_to_use_favorites.step.choose_stats.label_description": "Choose which stats to display",
+  "how_to_use_collection.title": "How to manage your collection",
+  "how_to_use_collection.step.save_set": "Save a new build",
+  "how_to_use_collection.step.save_set.label_description": "After finding a build you like, save it here to access it easily later",
+  "how_to_use_collection.step.choose_stats": "Edit displayed stats",
+  "how_to_use_collection.step.choose_stats.label_description": "Choose which stats to display",
 
   "advanced_options.title": "Advanced options",
   "advanced_options.step.import_set": "Import a new build",
@@ -21,5 +21,5 @@
   "actions.label_add_to_comparator": "Add to build comparator",
   "actions.label_copy_to_finder": "Copy stats to the Build Finder and use as a base",
   "actions.label_export_set": "Export the build",
-  "actions.label_delete_set": "Remove the build from your favorites"
+  "actions.label_delete_set": "Remove the build from your collection"
 }
