--- a/translations/locales/en/helpSearch.json
+++ b/translations/locales/en/helpSearch.json
@@ -28,11 +28,11 @@
   "advanced_options.step.filters.lock_item": "Lock a character, kart, wheels, or glider",
 
   "advanced_options.step.reuse_stats": "Reuse a build's stats",
-  "advanced_options.step.reuse_stats.open_favorites": "Open your favorites collection",
+  "advanced_options.step.reuse_stats.open_collection": "Open your collection",
   "advanced_options.step.reuse_stats.import_variations": "Import a build's stats to find variations",
 
   "results_management.title": "Results management",
-  "results_management.save_to_favorites": "Save to favorites",
+  "results_management.save_to_collection": "Save to your collection",
   "results_management.move_to_comparator": "Move to the build comparator",
   "results_management.export_set": "Export the build",
 
