--- a/translations/locales/fr/helpDisplay.json
+++ b/translations/locales/fr/helpDisplay.json
@@ -7,7 +7,7 @@
   "how_to_use_comparator.step.add_sets": "Ajoutez vos builds à comparer",
   "how_to_use_comparator.step.add_sets.label_create_set": "Créer un nouveau build",
 
-  "how_to_use_comparator.step.edit_sets": "Modifiez les buildsds rapidement",
+  "how_to_use_comparator.step.edit_sets": "Modifiez les builds rapidement",
   "how_to_use_comparator.step.edit_sets.label_edit_elements": "Cliquez sur le crayon pour modifier les éléments d’un build",
 
   "how_to_use_comparator.step.view_differences": "Visualisez les différences",
@@ -19,9 +19,9 @@
 
   "advanced_options_comparator.title": "Options avancées",
 
-  "advanced_options_comparator.step.import_from_favorites": "Importer un build depuis les favoris",
-  "advanced_options_comparator.step.import_from_favorites.label_open_collection": "Ouvrez votre collection de builds favoris",
-  "advanced_options_comparator.step.import_from_favorites.label_import_set": "Importer un build enregistré pour le comparer",
+  "advanced_options_comparator.step.import_from_collection": "Importer un build depuis la collection",
+  "advanced_options_comparator.step.import_from_collection.label_open_collection": "Ouvrez votre collection de builds",
+  "advanced_options_comparator.step.import_from_collection.label_import_set": "Importer un build enregistré pour le comparer",
 
   "advanced_options_comparator.step.sort_sets": "Trier les builds",
   "advanced_options_comparator.step.sort_sets.label_open_sorts": "Ouvrez les différents tris possibles",
@@ -29,7 +29,7 @@
   "advanced_options_comparator.step.sort_sets.label_long_press_hint": "Cliquez longuement sur un bouton de tri pour afficher son nom",
 
   "actions_comparator.title": "Actions disponibles",
-  "actions_comparator.label_save_to_favorites": "Sauvegarder dans vos favoris",
+  "actions_comparator.label_save_to_collection": "Sauvegarder dans votre collection",
   "actions_comparator.label_copy_to_finder": "Copier les stats dans le Chercheur de builds et utiliser comme base",
   "actions_comparator.label_export_set": "Exporter le build",
 
