--- a/translations/locales/fr/modal.json
+++ b/translations/locales/fr/modal.json
@@ -1,6 +1,6 @@
 {
   "filters": "Filtres",
-  "selectABuild": "Selectionner un buildld",
+  "selectABuild": "Selectionner un build",
 
   "desiredStatsAndStatsInBuilds": "Stats desirées et stats affichées dans les builds",
   "displayedStatsInBuilds": "Stats affichées dans les builds",
