--- a/translations/locales/en/toast.json
+++ b/translations/locales/en/toast.json
@@ -13,19 +13,19 @@
   "theSettingsHaveBeenReset": "the settings have been reset",
   "allSavedBuildsHaveBeenDeleted": "all saved builds have been deleted",
 
-  "setRenamed": "build renamed",
+  "buildRenamed": "the build renamed",
   "nameAlreadyExists": "name already exists",
-  "setStatsHaveBeenLoaded": "build stats have been loaded",
-  "setHasBeenLoadedInTheComparator": "build have been loaded in the comparator",
-  "setHasBeenSaved": "build has been saved",
-  "setHasBeenUnSaved": "build has been unsaved",
-  "setHasBeenDeleted": "build has been deleted",
-  "setCopiedInClipboard": "build copied to clipboard. You can now share it via message",
+  "buildStatsHaveBeenLoaded": "the build's stats have been loaded",
+  "buildHasBeenLoadedInTheComparator": "the build have been loaded in the comparator",
+  "buildHasBeenSaved": "the build has been saved, click on 'Collection' to find it",
+  "buildHasBeenUnsaved": "the build has been removed from your collection",
+  "buildHasBeenDeleted": "the build has been deleted",
+  "buildCopiedInClipboard": "build copied to clipboard. You can now share it via message",
   "buildImported": "build imported",
   "statsImported": "build's stats imported",
   "buildLimitReachedInThisScreen": "build limit reached",
   "cannotGenerateUniqueName": "cannot generate new name",
   "buildNameRequiredForSharing": "you must enter a name to share a build",
-  "buildNameRequiredForSaving": "you must enter a name to like a build",
+  "buildNameRequiredForSaving": "you must enter a name to record a build",
   "savedBuildCannotHaveEmptyName": "saved builds must have a name"
 }
