--- a/translations/locales/fr/helpSave.json
+++ b/translations/locales/fr/helpSave.json
@@ -1,12 +1,12 @@
 {
   "intro.centralize": "Centralisez et organisez ",
-  "intro.description": "tous vos builds préférés pour y accéder rapidement.",
+  "intro.description": "tous vos builds favoris pour y accéder rapidement.",
 
-  "how_to_use_favorites.title": "Comment gérer vos builds favoris",
-  "how_to_use_favorites.step.save_set": "Enregistrer un nouveau build",
-  "how_to_use_favorites.step.save_set.label_description": "Après avoir trouvé un build qui vous convient, enregistrez-le pour le retrouver ici",
-  "how_to_use_favorites.step.choose_stats": "Modifier les stats à afficher",
-  "how_to_use_favorites.step.choose_stats.label_description": "Choisissez les statistiques à afficher",
+  "how_to_use_collection.title": "Comment gérer votre collection de builds",
+  "how_to_use_collection.step.save_set": "Enregistrer un nouveau build",
+  "how_to_use_collection.step.save_set.label_description": "Après avoir trouvé un build qui vous convient, enregistrez-le pour le retrouver ici",
+  "how_to_use_collection.step.choose_stats": "Modifier les stats à afficher",
+  "how_to_use_collection.step.choose_stats.label_description": "Choisissez les statistiques à afficher",
 
   "advanced_options.title": "Options avancées",
   "advanced_options.step.import_set": "Importer un nouveau build",
@@ -21,5 +21,5 @@
   "actions.label_add_to_comparator": "Ajouter au comparateur de builds",
   "actions.label_copy_to_finder": "Copier les stats dans le Chercheur de builds et utiliser comme base de recherche",
   "actions.label_export_set": "Exporter le build",
-  "actions.label_delete_set": "Supprimer le build de vos favoris"
+  "actions.label_delete_set": "Supprimer le build de votre collection"
 }
