cannot duplicate build or build's name in any way (even by importation)

--- a/translations/locales/en/toast.json
+++ b/translations/locales/en/toast.json
@@ -14,7 +14,7 @@
   "allSavedBuildsHaveBeenDeleted": "all saved builds have been deleted",
 
   "buildRenamed": "the build renamed",
-  "nameAlreadyExists": "this name is already taken",
+  "nameAlreadyExists": "this name is already taken: ",
   "buildUpdated": "build updated",
   "buildAlreadyExistsWithTheName": "this build is already here, under the name: ",
   "buildStatsHaveBeenLoaded": "the build's stats have been loaded",
