implement the desynchronization of builds when one is editted

--- a/translations/locales/en/text.json
+++ b/translations/locales/en/text.json
@@ -21,5 +21,7 @@
 
   "warning": "Warning",
 
-  "tutoImportation": "Copy the text, go to 'Collection', and click the 'Import' (clipboard) button."
+  "tutoImportation": "Copy the text, go to 'Collection', and click the 'Import' (clipboard) button.",
+
+  "modified": "modified"
 }
