--- a/translations/locales/fr/text.json
+++ b/translations/locales/fr/text.json
@@ -21,5 +21,7 @@
 
   "warning": "Attention",
 
-  "tutoImportation": "Copiez le texte, allez dans 'Collection' et cliquez sur le bouton 'Importer' (presse-papier)."
+  "tutoImportation": "Copiez le texte, allez dans 'Collection' et cliquez sur le bouton 'Importer' (presse-papier).",
+
+  "modified": "modifié"
 }
