--- a/translations/locales/fr/toast.json
+++ b/translations/locales/fr/toast.json
@@ -14,9 +14,9 @@
   "allSavedBuildsHaveBeenDeleted": "tous les builds sauvegardés ont été supprimés !",
 
   "buildRenamed": "build renommé",
-  "nameAlreadyExists": "ce nom est déjà pris : ",
+  "nameAlreadyExists": "ce nom est déjà pris :",
   "buildUpdated": "build mis à jour",
-  "buildAlreadyExistsWithTheName": "ce build est déjà présent, sous le nom : ",
+  "buildAlreadyExists": "ce build est déjà présent",
   "buildStatsHaveBeenLoaded": "les stats du build ont été chargées",
   "buildHasBeenLoadedInTheComparator": "le build a été chargé dans le comparateur",
   "buildHasBeenSaved": "le build a été enregistré, cliquez sur 'Collection' pour le retrouver",
@@ -29,5 +29,10 @@
   "buildNameRequiredForSharing": "vous devez entrer un nom pour partager un build",
   "buildNameRequiredForSaving": "vous devez entrer un nom pour enregister un build",
   "buildNameRequiredForLoading": "vous devez entrer un nom pour déplacer un build",
-  "savedBuildCannotHaveEmptyName": "les builds de la collection doivent avoir un nom"
+  "savedBuildCannotHaveEmptyName": "les builds de la collection doivent avoir un nom",
+
+  "in": "dans",
+  "display": "le Comparateur",
+  "save": "la Collection",
+  "withTheName": "sous le nom"
 }
