--- a/translations/locales/fr/tooltip.json
+++ b/translations/locales/fr/tooltip.json
@@ -8,7 +8,7 @@
 
   "loadStatsOfASet": "Charger les stats d'un build",
   "loadASet": "Charger un build",
-  "importACopiedSet": "Importer un build copié",
+  "importACopiedSet": "Importer un build du presse-papier",
 
   "addASet": "Ajouter un build",
 
