organize data and types as modules

--- a/translations/locales/en/toast.json
+++ b/translations/locales/en/toast.json
@@ -6,7 +6,7 @@
   "theSettingsHaveBeenReset": "the settings have been reset",
   "allSavedBuildsHaveBeenDeleted": "all saved builds have been deleted",
 
-  "buildRenamed": "the build renamed",
+  "buildRenamed": "the build has been renamed",
   "buildUpdated": "build updated",
 
   "buildStatsHaveBeenLoaded": "the build's stats have been loaded",
