--- a/translations/locales/en/tooltip.json
+++ b/translations/locales/en/tooltip.json
@@ -47,22 +47,5 @@
 
   "confirm": "Confirm",
   "cancel": "Cancel",
-  "close": "Close",
-
-  "speedGround": "Ground speed (GS)",
-  "speedAntiGravity": "Anti-gravity speed (AGS)",
-  "speedWater": "Water speed (WS)",
-  "speedAir": "Air speed (AS)",
-  "acceleration": "Acceleration (Acc)",
-  "weight": "Weight (Wei)",
-  "handlingGround": "Ground handling (GH)",
-  "handlingAntiGravity": "Anti-gravity handling (AGH)",
-  "handlingWater": "Water handling (WH)",
-  "handlingAir": "Air handling (AH)",
-  "traction": "Traction (Tra)",
-  "miniTurbo": "Mini-Turbo (MT)",
-  "speed": "Speed",
-  "handling": "Handling",
-  "id": "Number",
-  "name": "Name"
+  "close": "Close"
 }
