--- a/translations/locales/en/placeholder.json
+++ b/translations/locales/en/placeholder.json
@@ -1,6 +1,7 @@
 {
   "searchEmpty": "Search your dream build",
   "searchNotFound": "No build found with theses stats",
+  "displayEmpty": "Compare your builds",
   "savedEmpty": "Find here your build collection",
   "none": "None"
 }
