--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -1,6 +1,7 @@
 {
   "search": "Chercher",
   "statsToCompare": "Stats à comparer",
+  "addASet": "Ajouter un build",
   "numberOfSearchResults": "Nombre de résultats de recherche",
   "configureDefaultStats": "Configurer les stats affichées par défault",
   "sendFeedback": "Laisser un avis",
