--- a/translations/locales/en/button.json
+++ b/translations/locales/en/button.json
@@ -1,7 +1,7 @@
 {
   "search": "Search",
   "statsToCompare": "Stats to compare",
-  "addASet": "Add a build",
+  "addABuild": "Add a build",
   "numberOfSearchResults": "Number of search results",
   "configureDefaultStats": "Configure default displayed stats",
   "sendFeedback": "Send feedback",
