--- a/translations/locales/fr/helpSave.json
+++ b/translations/locales/fr/helpSave.json
@@ -2,7 +2,8 @@
   "intro.centralize": "Centralisez et organisez ",
   "intro.description": "tous vos builds favoris pour y accéder rapidement.",
 
-  "how_to_use_collection.title": "Comment gérer votre collection de builds",
+  "how_to_use_collection.title": "Comment l'utiliser",
+
   "how_to_use_collection.step.save_set": "Enregistrer un nouveau build",
   "how_to_use_collection.step.save_set.label_description": "Après avoir trouvé un build qui vous convient, enregistrez-le pour le retrouver ici",
   "how_to_use_collection.step.choose_stats": "Modifier les stats à afficher",
@@ -18,7 +19,7 @@
 
   "actions.title": "Actions disponibles",
   "actions.label_edit_elements": "Modifier les éléments du build (personnage, kart, roues, ailes)",
-  "actions.label_add_to_comparator": "Ajouter au comparateur de builds",
+  "actions.label_add_to": "Ajouter au comparateur de builds",
   "actions.label_copy_to_finder": "Copier les stats dans le Chercheur de builds et utiliser comme base de recherche",
   "actions.label_export_set": "Exporter le build",
   "actions.label_delete_set": "Supprimer le build de votre collection"
